<resources>
    <string name="app_name">MVVMTodo</string>
    <string name="fab_addTask">add a new task</string>
    <string name="textView_contentDescription_priority">text of the task</string>
    <string name="fab_contentDescription_save_task">save task</string>
    <string name="editText_hint_taskName">Task name</string>
    <string name="item_title_hide_completed_tasks">Hide completed tasks</string>
    <string name="item_title_delete_completed_tasks">Delete all completed tasks</string>
    <string name="item_title_sort">Sort tasks</string>
    <string name="item_title_sort_tasks_by_name">Sort by name</string>
    <string name="item_title_sort_by_date_created">Sort by date created</string>
    <string name="item_title_search">Search</string>
    <string name="textView_text_createDate">Created: %s</string>
    <string name="checkBox_text_important">Important task</string>
    <string name="new_task_message">New task has been added successfully</string>
    <string name="update_task_message">Task has been updated successfully</string>
</resources>