<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/item_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/hide_completed_tasks"
        android:checkable="true"
        android:title="@string/item_title_hide_completed_tasks"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_tasks"
        android:title="@string/item_title_delete_completed_tasks"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/item_title_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_tasks_by_name"
                android:title="@string/item_title_sort_tasks_by_name" />
            <item
                android:id="@+id/sort_tasks_by_date_created"
                android:title="@string/item_title_sort_by_date_created" />
        </menu>
    </item>

</menu>