<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codinginflow.mvvmtodo.ui.addedittask.AddEditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/min_margin">

        <EditText
            android:id="@+id/editText_taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:hint="@string/editText_hint_taskName"
            android:inputType="text"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/checkBox_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_text_important" />

        <TextView
            android:id="@+id/textView_createDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Date created:"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/mid_margin"
        android:contentDescription="@string/fab_contentDescription_save_task"
        android:src="@drawable/ic_check_mark" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>